Fix fullscreen bug on Safari

--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -23,6 +23,7 @@ body {
 body,
 html {
   height: 100%;
+  padding-bottom: 1px;
 }
 
 body:not(.mod-mobile) a:hover {
